2009-08-06  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#129745 [AF Checked] [REGF] Incoming call UI is not coming in
		  Portrait mode when device is locked from layout view

	* src/home/hd-render-manager.h (STATE_IS_PORTRAIT_CAPABLE):
	  Mark HOME_EDIT state as one which we can switch to portrait mode from.

	Happy atomic explosion anniversary.

2009-08-05  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/util/hd-util.c (hd_util_modal_blocker_release_handler): Before
	sending delete to the client, check that the client's actor is not on
	top of the place where the ButtonRelease is reported, because that
	means that the ButtonRelease is just reported for the blocker window
	because the corresponding ButtonPress was reported to the blocker (X
	server always sends the press and release events to the same window).
	Fixes: NB#131259 - HildonAppMenu getting extra
	mb_wm_client_deliver_delete() calls

2009-08-05  Gordon Williams <gordon.williams@collabora.co.uk>

	* data/transitions.ini: Modified damage_timeout value to their
	  original (pre-2.2.69) state. If kept at the 40/40 ms values
	  dialpad -> show menu -> rotate displays a black background,
	  and often the rotation transition coming back from blanking
	  does not appear.

	* src/home/hd-render-manager.c: Now treat applet zoom amount as a 
	  separate value, and add that to transitions.ini.
	* src/launcher/hd-launcher-page.c
	* src/launcher/hd-launcher-grid.c
	* src/launcher/hd-launcher-grid.h: Moved 'depth' parameters for the
	  launcher transitions into transitions.ini
	* data/transitions.ini: Added zoom_applets value, launcher depth 
	  values. Added more comments.

2009-08-05  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.72

2009-08-04  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Optimise Clutter's mutex so that we do the real locking only when
	we have multiple threads using Clutter, i.e. during scanning of
	.desktop files.
